<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.p72b.bonitur.MainActivity" >

    <!-- Settings -->
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_setting"
          android:orderInCategory="200"
          android:showAsAction="ifRoom"
          myapp:showAsAction="ifRoom"
          android:title="@string/menu_settings"/>
     
    <!-- Save as template -->
    <item android:id="@+id/action_save_as_template"
          android:icon="@drawable/ic_about"
          android:title="@string/menu_save_as_template"
          android:showAsAction="never"
          myapp:showAsAction="never"/>
     
    <!-- Export to text -->
    <item android:id="@+id/action_export_to_txt"
          android:icon="@drawable/ic_about"
          android:title="@string/menu_export_to_txt"
          android:showAsAction="never"
          myapp:showAsAction="never"/>
     
    <!-- About -->
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_about"
          android:title="@string/menu_about"
          android:showAsAction="never"
          myapp:showAsAction="never"/>


</menu>
