<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ownAndroidDarkGreen"
        android:paddingBottom="7dp"
        android:paddingTop="7dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="35dp"
            android:layout_height="41dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_about" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/aboutTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ownWhite_100" />

            <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="@string/aboutSubTitle"
                android:textColor="@color/ownWhite_100" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ownWhite_100"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="4dp"
                android:text="@string/aboutPrivacyTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ownAndroidBlue" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutPrivacy"
                android:textColor="@color/ownBlack" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="8dp"
                android:text="@string/aboutSupportTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ownAndroidBlue" />

            <TextView
                android:id="@+id/textViewLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutSupport"
                android:textColor="@color/ownBlack"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutSupportMail"
                android:textColor="@color/ownDarkGrey" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingTop="8dp"
                android:text="@string/aboutNotesTitle"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/ownAndroidBlue" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:text="@string/aboutNotes"
                android:textColor="@color/ownBlack" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>