<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutBonitur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="end"
    tools:context="de.p72b.bonitur.ActivityBonitur" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollViewTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/handleBar"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollViewTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/scrollMarginBottom"
                        android:layout_marginEnd="@dimen/scrollMargin"
                        android:layout_marginRight="@dimen/scrollMargin" >
                    </TableLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#E8E8E8"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/ownDarkGrey"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ownLightGray"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvRowPosition"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvRowColSign"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvColPosition"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/ownWhite_100"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/ownWhite_100"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnNumbers"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="45dp"
                    android:layout_height="26dp"
                    android:background="@drawable/imagebuttonempty"
                    android:onClick="onNumbers"
                    android:text="@string/btn_numbers"
                    android:textColor="@color/ownAndroidDarkBlue" />

                <Button
                    android:id="@+id/btnLetters"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="45dp"
                    android:layout_height="26dp"
                    android:onClick="onLetters"
                    android:background="@drawable/imagebuttonempty"
                    android:text="@string/btn_letters" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextSpeechInput"
                android:layout_width="0dp"
                android:layout_height="@dimen/edtlastVoiceInput"
                android:layout_weight="1"
                android:background="@drawable/imagebuttonempty"
                android:gravity="center"
                android:inputType="number|numberSigned|numberDecimal"
                android:text=""
                android:textColor="@color/ownAndroidDarkBlue"
                android:textSize="@dimen/size_0" />

            <ImageButton
                android:id="@+id/imageButtonStartVoiceRecord"
                android:layout_width="@dimen/iconMax"
                android:layout_height="@dimen/iconMax"
                android:layout_gravity="bottom"
                android:background="@drawable/imagebuttonempty"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_voice_start" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>